--- a/CSS Minifier/contact.css
+++ b/CSS Minifier/contact.css
@@ -12,7 +12,7 @@ body {
 }
 
 #onboarding {
-    padding: 50px 20px;
+    padding: 20px 20px;
     max-width: 800px;
     width: 80%;
     margin: 20px auto;
@@ -25,8 +25,9 @@ body {
 .container .head {
     display: flex;
     flex-wrap: wrap;
-    font-size: 1.8vw;
-    line-height: 0;
+    font-size: 30px;
+    line-height: 1;
+    text-transform: uppercase;
     align-items: center;
 }
 
@@ -34,8 +35,13 @@ h1, h2 {
     margin-bottom: 10px;
 }
 
+p {
+    color: #ccc;
+}
+
 progress {
     background-color: #25D366;
+    width: 90%;
 }
 
 ul.skills-list {
@@ -47,7 +53,7 @@ ul.skills-list {
     margin: 10px 0;
 }
 
-button, .button {
+button {
     background-color: #07a140;
     color: white;
     border: none;
@@ -57,11 +63,7 @@ button, .button {
     transition: background-color 0.3s ease;
 }
 
-.button {
-    text-decoration: none;
-}
-
-.button:hover {
+button:hover {
     border: #25D366 1px solid;
     background-color: #fff;
     color: red;
@@ -80,10 +82,6 @@ button, .button {
         opacity: 1;
         transform: translateY(0);
     }
-}
-
-.project {
-    margin: 20px 0;
 }
 
 blockquote {
@@ -132,3 +130,19 @@ footer {
 footer a {
     color: #25D366;
 }
+  
+
+@media (max-width: 909px) {
+    .head, .head img {
+        font-size: 3.5vw !important;
+    }
+
+    h2 {
+        font-size: 4vw;
+    }
+
+    p {
+        font-size: 3vw;
+    }
+}
+
