--- a/CSS Minifier/style.css
+++ b/CSS Minifier/style.css
@@ -315,7 +315,7 @@ i {
     font-weight: bold;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
 }
 
@@ -589,13 +589,6 @@ i {
     color: #fff;
 }
 
-.skills-title article {
-    border: 0.5px solid #b493f1;
-    width: 100%;
-    height: 0;
-    margin: auto;
-}
-
 .skills-container {
     overflow: hidden;
     width: 100%;
@@ -607,7 +600,7 @@ i {
 .skills-track {
     display: flex;
     width: 200%;
-    animation: scroll 10s linear infinite;
+    animation: scroll 8s linear infinite;
 }
 
 .skill-card {
@@ -786,8 +779,8 @@ i {
 }
 
 #videoBox {
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     overflow: hidden;
     border-radius: 50%;
     transition: transform 0.3s ease-in-out;
@@ -891,7 +884,7 @@ label {
 
 input::placeholder,
 textarea::placeholder {
-    font-size: 15px;
+    font-size: 14px;
     margin-left: 30px;
 }
 
@@ -1112,7 +1105,7 @@ footer .footer-links span {
 .menu {
     position: fixed;
     top: 82px;
-    right: -60vw;
+    right: -65vw;
     width: 50vw;
     height: 20vh;
     border-radius: 10px;
@@ -2065,9 +2058,9 @@ footer .footer-links span {
 
 
     .potfolio img {
-        width: 15vw;
-        margin-top: 6px;
-        margin-left: 10px;
+        width: 22vw;
+        margin-top: 1.5vw;
+        margin-left: 6vw;
     }
 
     .top-nav {
@@ -2114,6 +2107,7 @@ footer .footer-links span {
     }
 
     .me p {
+        font-size: 4vw;
         margin: 0;
         display: flex;
         justify-content: center;
@@ -2121,6 +2115,7 @@ footer .footer-links span {
 
     .me h2 {
         margin: 10px;
+        font-size: 9vw;
         display: flex;
         justify-content: center;
     }
@@ -2161,20 +2156,6 @@ footer .footer-links span {
         justify-content: center;
     }
 
-    .my-journey {
-        padding-top: 6pc;
-    }
-
-    .work-experience h2 {
-        padding: 0;
-        margin: 0;
-    }
-
-    .experience-card {
-        width: 100%;
-        margin: 5px 30px;
-    }
-
 
     .experience span {
         font-size: 10vw;
@@ -2194,7 +2175,7 @@ footer .footer-links span {
     .recent {
         line-height: 0.6;
         text-align: center;
-        font-size: 4.0rem !important;
+        font-size: 12vw !important;
     }
 
     .projects-container {
@@ -2241,6 +2222,22 @@ footer .footer-links span {
     .write-up2 h2 {
         padding: 10px;
     }
+
+    .my-journey {
+        padding-top: 6pc;
+    }
+
+    .work-experience h2 {
+        padding: 0;
+        margin: 0;
+        line-height: 0.9;
+    }
+
+    .experience-card {
+        width: 100%;
+        margin: 5px 30px;
+    }
+
 
     .section3 {
         padding-top: 6pc;
